crates/oxc_react_compiler/tests/snapshots/valid-setState-in-effect-from-ref-array-index.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-setState-in-effect-from-ref-array-index.js
---
No changes.
