crates/oxc_react_compiler/tests/snapshots/valid-setState-in-useEffect-controlled-by-ref-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-setState-in-useEffect-controlled-by-ref-value.js
---
No changes.
