crates/oxc_react_compiler/tests/snapshots/valid-setState-in-useEffect-listener.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-setState-in-useEffect-listener.js
---
// @validateNoSetStateInEffects @outputMode:"lint"
import { useEffect, useState } from "react";
function Component() {
	const [state, setState] = useState(0);
	useEffect(() => {
		setTimeout(setState, 10);
	});
	return state;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
