crates/oxc_react_compiler/tests/snapshots/valid-setState-in-useLayoutEffect-from-ref.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-setState-in-useLayoutEffect-from-ref.js
---
No changes.
