crates/oxc_react_compiler/tests/snapshots/validate-no-set-state-in-render-unconditional-lambda-which-conditionally-sets-state-ok.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/validate-no-set-state-in-render-unconditional-lambda-which-conditionally-sets-state-ok.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoSetStateInRender
import { useState } from "react";
function Component(props) {
	const $ = _c(2);
	const [x, setX] = useState(0);
	const foo = () => {
		setX(1);
	};
	const bar = () => {
		if (props.cond) {
			foo();
		}
	};
	const baz = () => {
		bar();
	};
	baz();
	let t0;
	if ($[0] !== x) {
		t0 = [x];
		$[0] = x;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ cond: false }]
};
