crates/oxc_react_compiler/tests/snapshots/value-block-mutates-outer-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/value-block-mutates-outer-value.ts
---
import { makeArray, useHook } from "shared-runtime";
/**
* Here, the cond ? [...] : defaultList value block produces two
* new values (each with its own scope):
*   $0 = ["text"]
*   $1 = { text: $0 }
* The same value block also mutates customList, so it must be
* merged with the scope producing customList
*/
function Foo(t0) {
	const { defaultList, cond } = t0;
	const comparator = _temp;
	useHook();
	const customList = makeArray(1, 5, 2);
	useHook();
	const result = cond ? [...customList.sort(comparator), { text: ["text"] }] : defaultList;
	return result;
}
function _temp(a, b) {
	return a - b;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{
		defaultList: [2, 4],
		cond: true
	}]
};
